Translator/Templates/Grammar.txt
Grammar.

lang -> function+

function -> func_type SPC* VAR SPC* LB SPC* (VAR SPC* (COMMA SPC* VAR SPC*)*)? SPC* RB SPC* LSB SPC* expr* SPC* RSB SPC*
func_type -> VOID_T|FUNC_T
expr -> assign_expr|condition_expr|while_expr|lang_func|list_expr|ht_expr|for_expr|return_expr

assign_expr -> VAR SPC* ASSIGN_OP SPC* value_expr SPC* EOL SPC*
condition_expr -> IF_KW SPC* LB SPC* logic_expr SPC* RB SPC* LSB SPC* expr* SPC* RSB SPC* (ELSE_KW SPC* LSB SPC* expr* SPC* RSB)? SPC*
while_expr -> WHILE_KW SPC* LB SPC* logic_expr SPC* RB SPC* LSB SPC* expr* SPC* RSB SPC*
for_expr -> FOR_KW SPC* LB SPC* assign_expr logic_expr EOL SPC* VAR SPC* ASSIGN_OP SPC* value_expr SPC* RB SPC* LSB SPC* expr* SPC* RSB SPC*
return_expr -> RETURN_KW SPC* value_expr? SPC* EOL SPC*

lang_func -> out_func
out_func -> PRINT_KW LB SPC* value_expr SPC* RB SPC* EOL SPC*


ht_expr -> ht_init|ht_insert|ht_delete|ht_display
ht_init -> HT_KW SPC+ VAR SPC* EOL SPC*
ht_insert -> VAR POINT INSERT_KW LB SPC* value_expr SPC* COMMA SPC* value_expr SPC* RB SPC* EOL SPC*
ht_delete -> VAR POINT DELETE_KW LB SPC* value_expr SPC* RB SPC* EOL SPC*
ht_search -> VAR POINT SEARCH_VALUE_KW LB SPC* value_expr SPC* RB SPC*
ht_display -> VAR POINT DISPLAY_KW LB SPC* RB SPC* EOL SPC*


list_expr -> list_init|list_insert|list_delete|list_simple_func
list_init -> LIST_KW SPC+ VAR SPC* EOL SPC*
list_insert -> VAR POINT INSERT_KW LB SPC* value_expr SPC* COMMA SPC* value_expr SPC* RB SPC* EOL SPC*
list_delete -> VAR POINT DELETE_KW LB SPC* value_expr SPC* RB SPC* EOL SPC*

list_get -> list_get_value|list_get_index|list_size
list_get_value -> VAR POINT GET_VALUE_KW LB SPC* value_expr SPC* RB SPC*
list_get_index -> VAR POINT GET_INDEX_KW LB SPC* value_expr SPC* RB SPC*
list_size -> VAR POINT func_name LB SPC* RB SPC*

list_simple_func -> VAR POINT func_name LB SPC* RB SPC* EOL SPC*
func_name -> CLEAR_KW|DISPLAY_KW


value_expr -> value SPC* (OP SPC* value)*
value -> VAR|DIGIT|bracket_expr|list_get
bracket_expr -> LB SPC* value_expr SPC* RB SPC*
logic_expr -> value_expr SPC* COMP_OP SPC* value_expr SPC*


VAR	-> ^([a-zA-Z]+)$
DIGIT -> ^(0|[1-9][0-9]*)$
ASSIGN_OP -> ^=$
OP -> ^(\+|-|\*|\/)$
LB -> ^\($
RB -> ^\)$
IF_KW -> ^if$
ELSE_KW -> ^else$
LSB -> ^\{$
RSB -> ^\}$
COMP_OP -> ^(>=|<=|>|<|!=|==)$
WHILE_KW -> ^while$
FOR_KW -> ^for$
SPC -> ^ $
EOL -> ^;$
OUT_KW -> ^out$
LIST_KW -> ^list$
POINT -> ^.$
COMMA -> ^,$
INSERT_KW -> ^insert$
GET_VALUE_KW -> ^getValue$
GET_INDEX_KW -> ^getIndex$
DELETE_KW -> ^delete$
CLEAR_KW -> ^clear$
DISPLAY_KW -> ^display$
SIZE_KW -> ^size$
HT_KW -> ^htable$
SEARCH_KW -> ^search$
VOID_T -> ^void$
FUNC_T -> ^func$
RETURN_KW -> ^return$









Оптимизация грамматики для слияния распознавания списков и хеш-таблиц
########################

function -> out_func|collect_func
out_func -> PRINT_KW LB SPC* value_expr SPC* RB SPC* EOL SPC*
collect_func -> init_func|insert_func|delete_func|display_func|clear_func

init_func -> var_type SPC+ VAR SPC* EOL SPC*
var_type -> HT_KW|LIST_KW

insert_func -> VAR POINT INSERT_KW LB SPC* value_expr SPC* COMMA SPC* value_expr SPC* RB SPC* EOL SPC*
delete_func -> VAR POINT DELETE_KW LB SPC* value_expr SPC* RB SPC* EOL SPC*
display_func -> VAR POINT DISPLAY_KW LB SPC* RB SPC* EOL SPC*
clear_func -> VAR POINT CLEAR_KW LB SPC* RB SPC* EOL SPC*

get_func -> search_func|get_value_func|get_index_func|size_func

search_func -> VAR POINT SEARCH_VALUE_KW LB SPC* value_expr SPC* RB SPC*
get_value_func -> VAR POINT GET_VALUE_KW LB SPC* value_expr SPC* RB SPC*
get_index_func -> VAR POINT GET_INDEX_KW LB SPC* value_expr SPC* RB SPC*
size_func -> VAR POINT func_name LB SPC* RB SPC*

########################
